--- a/cart.html
+++ b/cart.html
@@ -115,6 +115,12 @@
             text-align: right;
             margin-top: 15px;
         }
+        .price-delete-container {
+    display: flex;
+    align-items: center;
+    gap: 10px; /* Adjust the gap as needed */
+}
+
     </style>
 </head>
 <body>
