--- a/cart.html
+++ b/cart.html
@@ -208,7 +208,7 @@
 
     </nav>
 
-    <div class="container">
+    <div>
         <div class="cart-header">
             <label>Shopping Cart</label>
             <button type="button" class="close" aria-label="Close" onclick="window.location.href='index.html'">
@@ -238,7 +238,7 @@
 </div>
 <div class="container">
         <div class="payment-method">
-            <h6>Payment Method</h6>
+            <span>Payment Method</span>
             <p>M-PESA</p>
         </div>
 </div>
