--- a/cart.html
+++ b/cart.html
@@ -28,6 +28,8 @@
     body {
         font-family: Arial, sans-serif;
         padding-top: 70px;
+        padding-left: 20px;
+        padding-right: 20px;
         background-color: #f7f7f7;
     }
 
