--- a/cart.html
+++ b/cart.html
@@ -28,8 +28,6 @@
     body {
         font-family: Arial, sans-serif;
         padding-top: 70px;
-        padding-left: 20px;
-        padding-right: 20px;
         background-color: #f7f7f7;
     }
 
@@ -210,7 +208,7 @@
 
     </nav>
 
-    <div>
+    <div class="container">
         <div class="cart-header">
             <label>Shopping Cart</label>
             <button type="button" class="close" aria-label="Close" onclick="window.location.href='index.html'">
