--- a/cart.html
+++ b/cart.html
@@ -33,13 +33,12 @@
 
     .container {
     max-width: 900px;
-    margin: 20px auto; /* Adds 20px of space above and below each container */
+    margin: 20px auto; /* Auto on the left and right centers the container */
+    padding: 20px;
     background: #fff;
     border-radius: 5px;
-    padding: 20px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
-
 
     .cart-header {
         display: flex;
