--- a/cart.html
+++ b/cart.html
@@ -32,13 +32,14 @@
     }
 
     .container {
-    max-width: 900px;
-    margin: 20px auto; /* Auto on the left and right centers the container */
-    padding: 20px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
+        max-width: 900px;
+        margin: 20px auto;
+        /* Auto on the left and right centers the container */
+        padding: 10px;
+        background: #fff;
+        border-radius: 5px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
 
     .cart-header {
         display: flex;
@@ -89,14 +90,17 @@
         border-top: 1px solid #ddd;
         margin-top: 15px;
     }
-    .payment-method, .shipping-info {
+
+    .payment-method,
+    .shipping-info {
         display: flex;
         justify-content: space-between;
         padding: 10px 0;
         border-top: 1px solid #fff;
-        border-bottom:1px solid #fff;
+        border-bottom: 1px solid #fff;
         margin-top: 15px;
     }
+
     .shipping-info button {
         background: none;
         border: none;
@@ -128,18 +132,20 @@
 
     .modal-footer {
         display: flex;
-        justify-content: flex-end; /* Aligns content to the right */
-        padding: 1rem; /* Optional: Adjust padding as needed */
+        justify-content: flex-end;
+        /* Aligns content to the right */
+        padding: 1rem;
+        /* Optional: Adjust padding as needed */
         border-top: 1px solid #fff;
-        border-bottom:1px solid #fff;
-    
-    }
+        border-bottom: 1px solid #fff;
 
-    .modal-footer button {
-        width: 20%; /* Set the button width to 20% */
-        margin-left: auto; /* Keeps the button on the right */
-        background-color: #fff;
     }
+    @media (max-width: 768px) {
+  .container {
+    margin: 10px;
+  }
+}
+
 </style>
 </head>
 
@@ -234,14 +240,16 @@
             <span>Shipping Information</span>
             <button type="button" class="btn btn-link" id="btn-link">Add Shipping Address</button>
         </div>
-</div>
-<div class="container">
+    </div>
+    <div class="container">
+        <span>Payment Method</span>
         <div class="payment-method">
-            <span>Payment Method</span>
-            <p>M-PESA</p>
+            <!-- <span>Payment Method</span> -->
+            <p style="font-family: background-origin: padding-box;;">M-PESA</p>
         </div>
-</div>
-<div class="container">
+    </div>
+    </div>
+    <div class="container">
         <div class="modal-footer">
             <button type="button" class="btn btn-primary" id="checkout-button">Place Order</button>
         </div>
