--- a/cart.html
+++ b/cart.html
@@ -40,7 +40,15 @@
         border-radius: 5px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-
+    .container-cart{
+        max-width: 900px;
+        margin: 20px auto;
+        /* Auto on the left and right centers the container */
+        padding: 10px;
+        background: #fff;
+        border-radius: 4px;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
     .cart-header {
         display: flex;
         justify-content: space-between;
@@ -140,7 +148,7 @@
         border-bottom: 1px solid #fff;
 
     }
-    @media (max-width: 768px) {
+    @media (max-width: 767px) {
   .container {
     margin: 10px;
   }
@@ -213,12 +221,10 @@
 
     </nav>
 
-    <div class="container">
+    <div class="container-cart">
         <div class="cart-header">
             <label>Shopping Cart</label>
-            <button type="button" class="close" aria-label="Close" onclick="window.location.href='index.html'">
-                <span aria-hidden="true">&times;</span>
-            </button>
+           
         </div>
 
         <div id="cart-items-list">
