--- a/cart.html
+++ b/cart.html
@@ -40,15 +40,7 @@
         border-radius: 5px;
         box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     }
-    .container-cart{
-        max-width: 900px;
-        margin: 20px auto;
-        /* Auto on the left and right centers the container */
-        padding: 10px;
-        background: #fff;
-        border-radius: 4px;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
+
     .cart-header {
         display: flex;
         justify-content: space-between;
@@ -221,10 +213,9 @@
 
     </nav>
 
-    <div class="container-cart">
+    <div class="container">
         <div class="cart-header">
             <label>Shopping Cart</label>
-           
         </div>
 
         <div id="cart-items-list">
