--- a/cart.html
+++ b/cart.html
@@ -78,7 +78,7 @@
     }
 
     .item-price {
-        font-size: 16px;
+        font-size: 15px;
         font-weight: bold;
     }
 
@@ -144,6 +144,11 @@
   .container {
     margin: 10px;
   }
+  .item-price {
+        font-size: 13px;
+        font-weight: bold;
+    }
+
 }
 
 </style>
