--- a/cart.html
+++ b/cart.html
@@ -145,8 +145,16 @@
     margin: 10px;
   }
   .item-price {
-        font-size: 13px;
+        font-size: 12px;
         font-weight: bold;
+    }
+
+    .item-details h6 {
+        font-size: 0.85rem; /* Smaller font size for mobile */
+    }
+
+    .item-details p {
+        font-size: 0.75rem; /* Smaller font size for mobile */
     }
 
 }
