--- a/cart.html
+++ b/cart.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
     <meta name="description"
         content="Visit our school uniform store in Kericho town for high-quality, affordable uniforms. We provide a wide range of uniforms for different schools.">
     <meta name="keywords"
