--- a/cart.html
+++ b/cart.html
@@ -142,6 +142,24 @@
         border-bottom: 1px solid #fff;
 
     }
+    @media (max-width: 767px) {
+  .container {
+    margin: 10px;
+  }
+  .item-price {
+        font-size: 12px;
+        font-weight: bold;
+    }
+
+    .item-details h6 {
+        font-size: 0.85rem; /* Smaller font size for mobile */
+    }
+
+    .item-details p {
+        font-size: 0.75rem; /* Smaller font size for mobile */
+    }
+
+}
 
 </style>
 </head>
@@ -239,7 +257,7 @@
         <span>Payment Method</span>
         <div class="payment-method">
             <!-- <span>Payment Method</span> -->
-            <p style="font-family: background-origin: padding-box;;">M-PESA</p>
+            <p style="font-family: background-origin;">M-PESA</p>
         </div>
     </div>
     </div>
