--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-
     <meta name="description"
         content="Visit our school uniform store in Kericho town for high-quality, affordable uniforms. We provide a wide range of uniforms for different schools.">
     <meta name="keywords"
@@ -142,24 +141,7 @@
         border-bottom: 1px solid #fff;
 
     }
-    @media (max-width: 767px) {
-  .container {
-    margin: 10px;
-  }
-  .item-price {
-        font-size: 12px;
-        font-weight: bold;
-    }
 
-    .item-details h6 {
-        font-size: 0.85rem; /* Smaller font size for mobile */
-    }
-
-    .item-details p {
-        font-size: 0.75rem; /* Smaller font size for mobile */
-    }
-
-}
 
 </style>
 </head>
@@ -230,7 +212,7 @@
 
     <div class="container">
         <div class="cart-header">
-            <label>Shopping Cart</label>
+            <label>Cart</label>
         </div>
 
         <div id="cart-items-list">
