--- a/admin.html
+++ b/admin.html
@@ -8,6 +8,11 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
     <style>
+        html, body {
+    overflow-x: hidden; /* Prevent horizontal scrolling */
+    width: 100%; /* Ensure the content fits within the viewport */
+}
+
         .container {
             margin-top: 30px;
         }
