--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                  <div class="col-md-3 mb-4">
                     <h6>Follow Us</h6>
                     <div class="social-links">
-                        <a href="https://www.facebook.com/profile.php?id=61558529633976" class="btn btn-outline-light btn-social" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
+                        <a href="https://web.facebook.com/profile.php?id=61564960736692" class="btn btn-outline-light btn-social" aria-label="Follow us on Facebook"><i class="fab fa-facebook-f"></i> Facebook</a>
                         <a href="https://www.instagram.com/jollysuperuniforms?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn btn-outline-light btn-social" aria-label="Follow us on Instagram"><i class="fab fa-instagram"></i> Instagram</a>
                         <!-- <a href="#" class="btn btn-outline-light btn-social" aria-label="Follow us on LinkedIn"><i class="fab fa-linkedin-in"></i></a> -->
                     </div>
