--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         class="container mt-5 hidden">
             <!-- Main Content -->
     <div class="admin-panel mt-5 pt-3">
-        <div id="carouselExampleIndicators" class="carousel slide style="padding-top: 10px; " data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide style="padding-top: 10px; background-color:#fff" data-ride="carousel">
             <ol class="carousel-indicators">
                 <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                 <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -150,13 +150,14 @@
 <!-- New Product Details Container -->
 <div id="product-details-container" class="container hidden" style="margin-top: 60px;">
     <!-- Breadcrumb Navigation -->
-    <nav aria-label="breadcrumb">
-        <ul class="breadcrumb">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html">Products</a></li>
-            <li>Product Details</li>
-        </ul>
-    </nav>
+   <nav aria-label="breadcrumb style="background-color: #fff;" >
+    <ul class="breadcrumb">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index.html">Products</a></li>
+        <li>Product Details</li>
+    </ul>
+</nav>
+
 
     <div class="row" style="padding-top: 10px; font-size: medium; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
         <!-- Product Image -->
