--- a/cart.html
+++ b/cart.html
@@ -162,7 +162,119 @@
     font-size: 0.75rem; /* Smaller font size for mobile */
   }
 }
+  /* Modal styles */
+  .modal {
+            display: none;
+            position: fixed;
+            z-index: 1000;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.5);
+            justify-content: center;
+            align-items: center;
+        }
 
+        .modal-content {
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            max-width: 400px;
+            margin: 0 auto;
+            padding: 20px;
+            position: relative;
+        }
+
+        .close {
+            position: absolute;
+            top: 10px;
+            right: 10px;
+            background: none;
+            border: none;
+            font-size: 24px;
+            cursor: pointer;
+        }
+
+        /* Other existing form styles */
+        .form-header h5 {
+            margin: 0;
+            font-size: 12px;
+        }
+
+        .form-row {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .half-width {
+            width: 49%;
+        }
+
+        .form-group {
+            margin-bottom: 5px;
+        }
+
+        .form-control {
+            width: 100%;
+            padding: 2px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+
+        .form-error {
+            color: red;
+            font-size: 9px;
+            display: none; /* Hide by default */
+        }
+
+        .form-char-count {
+            display: block;
+            text-align: right;
+            font-size: 9px;
+            color: #888;
+        }
+
+        .default-address {
+            display: flex;
+            align-items: center;
+        }
+
+        .default-address input {
+            margin-right: 10px;
+        }
+
+        .form-actions {
+            display: flex;
+            justify-content: space-between;
+        }
+
+        .btn {
+            padding: 10px 20px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+
+        .btn-submit {
+            background-color: #1f83c6;
+            color: #fff;
+        }
+
+        .btn-cancel {
+            background-color: #cfcdcd;
+            color: #333;
+        }
+
+        label {
+            font-size: 10px;
+        }
+
+        input {
+            color: #888;
+        }
 
 </style>
 </head>
@@ -267,8 +379,141 @@
             <button type="button" class="btn btn-primary" id="checkout-button">Place Order</button>
         </div>
     </div>
-    <script src="cart.js"></script> <!-- Link to your JavaScript file -->
+     <!-- Modal -->
+     <div id="addressModal" class="modal">
+        <div class="modal-content">
+            <div class="form-header">
+                <h5>Add Address</h5>
+                <button type="button" class="close" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form class="address-form">
+                <div class="form-row">
+                    <div class="form-group half-width">
+                        <input type="text" id="firstName" class="form-control" placeholder="First Name">
+                        <small class="form-error">Please enter first name.</small>
+                    </div>
+                    <div class="form-group half-width">
+                        <input type="text" id="lastName" class="form-control" placeholder="Last Name">
+                        <small class="form-error">Please enter last name.</small>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="phone-input">
+                        <input type="text" id="phoneNumber" class="form-control phone-number" placeholder="e.g. 700200100">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group half-width">
+                        <select id="county" class="form-control">
+                            <option>Select County</option>
+                            <option>Kericho</option>
+                            <option>Bomet</option>
+                            <!-- Add more options as needed -->
+                        </select>
+                    </div>
+                    <div class="form-group half-width">
+                        <select id="subcounty" class="form-control">
+                            <option>Ainamoi</option>
+                            <option>Township</option>
+                            <option>Brook</option>
+                            <!-- Add more options as needed -->
+                        </select>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <select id="area" class="form-control">
+                        <option>Kericho Town</option>
+                        <option>Ainamoi Centre</option>
+                        <option>Litein</option>
+                        <!-- Add more options as needed -->
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="addressDetails">Address Details (Delivery to Doorstep)</label>
+                    <textarea id="addressDetails" class="form-control" rows="3" placeholder="Name of the building and floor, Road, Ward (E.g. Room 310, 3rd floor, Tengecha Lane, Ubora Centre)"></textarea>
+                    <small class="form-char-count">0/200</small>
+                </div>
+                <div class="form-group default-address">
+                    <input type="checkbox" id="defaultAddress">
+                    <label for="defaultAddress">Set to the default address</label>
+                </div>
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-submit">Submit</button>
+                    <button type="button" class="btn btn-cancel">Cancel</button>
+                </div>
+            </form>
+        </div>
+    </div>
 
+    <script src="cart.js"></script> <!-- Link to your JavaScript file -->
+    <script>
+        // Get the modal
+        var modal = document.getElementById("addressModal");
+
+        // Get the button that opens the modal
+        var btn = document.getElementById("btn-link");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks the button, open the modal 
+        btn.onclick = function() {
+            modal.style.display = "flex";
+        }
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function() {
+            modal.style.display = "none";
+        }
+
+        // When the user clicks anywhere outside of the modal, close it
+        window.onclick = function(event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+        // Get the modal
+var modal = document.getElementById("addressModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("btn-link");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// Function to disable scrolling
+function disableScroll() {
+    document.body.style.overflow = 'hidden';
+}
+
+// Function to enable scrolling
+function enableScroll() {
+    document.body.style.overflow = 'auto';
+}
+
+// When the user clicks the button, open the modal and disable scrolling
+btn.onclick = function() {
+    modal.style.display = "flex";
+    disableScroll();
+}
+
+// When the user clicks on <span> (x), close the modal and enable scrolling
+span.onclick = function() {
+    modal.style.display = "none";
+    enableScroll();
+}
+
+// When the user clicks anywhere outside of the modal, close it and enable scrolling
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+        enableScroll();
+    }
+}
+
+    </script>
 </body>
 
 </html>
