--- a/form.html
+++ b/form.html
@@ -101,6 +101,8 @@ body {
 
 .default-address input {
     margin-right: 10px;
+    font-size: large;
+    font-weight: lighter;
 }
 
 .form-actions {
