--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 10px 0;
+        padding: 5px 0;
         border-bottom: 1px solid #ddd;
     }
 
@@ -213,85 +213,122 @@
         cursor: pointer;
     }
 
-    /* Other existing form styles */
-    .form-header h5 {
-        margin: 0;
-        font-size: 12px;
-    }
+    .address-form-container {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
-    .form-row {
-        display: flex;
-        justify-content: space-between;
-    }
+.form-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+}
 
-    .half-width {
-        width: 49%;
-    }
+.form-header h5 {
+    margin: 0;
+    font-size: 12px;
+}
 
-    .form-group {
-        margin-bottom: 5px;
-    }
+.close {
+    background: none;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
 
-    .form-control {
-        width: 100%;
-        padding: 2px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        box-sizing: border-box;
-    }
+.form-row {
+    display: flex;
+    justify-content: space-between;
+}
 
-    .form-error {
-        color: red;
-        font-size: 9px;
-        display: none;
-        /* Hide by default */
-    }
+.half-width {
+    width: 50%;
+}
 
-    .form-char-count {
-        display: block;
-        text-align: right;
-        font-size: 9px;
-        color: #888;
-    }
+.form-group {
+    margin-bottom: 15px;
+}
 
-    .default-address {
-        display: flex;
-        align-items: center;
-    }
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+}
 
-    .default-address input {
-        margin-right: 10px;
-    }
+.form-control {
+    width: 100%;
+    padding: 3px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
 
-    .form-actions {
-        display: flex;
-        justify-content: space-between;
-    }
+.phone-input {
+    display: flex;
+}
 
-    .btn {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-    }
+.phone-code {
+    width: 70px;
+    margin-right: 10px;
+    text-align: center;
+}
 
-    .btn-submit {
-        background-color: #1f83c6;
-        color: #fff;
-    }
+.form-error {
+    color: red;
+    font-size: 9px;
+    display: none; /* Hide by default */
+}
 
-    .btn-cancel {
-        background-color: #cfcdcd;
-        color: #333;
-    }
+.form-char-count {
+    display: block;
+    text-align: right;
+    font-size: 9px;
+    color: #888;
+}
 
-    label {
-        font-size: 10px;
-    }
+.default-address {
+    display: flex;
+    align-items: center;
+}
 
-    input {
-        color: #888;
-    }
+.default-address input {
+    margin-right: 10px;
+}
+
+.form-actions {
+    display: flex;
+    justify-content: space-between;
+}
+
+.btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn-submit {
+    background-color: #1f83c6;
+    color: #fff;
+}
+
+.btn-cancel {
+    background-color: #cfcdcd;
+    color: #333;
+}
+label{
+    font-size: 10px;
+}
+input{
+color: #888;
+}
     /* Disable scroll when no-scroll class is added to the body */
 .no-scroll {
     overflow: hidden;
@@ -409,9 +446,9 @@
     <div id="addressModal" class="modal">
         <div class="modal-content">
             <div class="form-header">
-                <h5>Add Address</h5>
+                <label for="addressDetails">Add Address</label>
                 <button type="button" class="close" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                    <span aria-hidden="true">×</span>
                 </button>
             </div>
             <form class="address-form">
@@ -427,8 +464,8 @@
                 </div>
                 <div class="form-group">
                     <div class="phone-input">
-                        <input type="text" id="phoneNumber" class="form-control phone-number"
-                            placeholder="e.g. 700200100">
+                        <input type="text" id="phoneCode" class="form-control phone-code" value="+254" readonly="">
+                        <input type="text" id="phoneNumber" class="form-control phone-number" placeholder="e.g. 700200100">
                     </div>
                 </div>
                 <div class="form-row">
@@ -459,8 +496,7 @@
                 </div>
                 <div class="form-group">
                     <label for="addressDetails">Address Details (Delivery to Doorstep)</label>
-                    <textarea id="addressDetails" class="form-control" rows="3"
-                        placeholder="Name of the building and floor, Road, Ward (E.g. Room 310, 3rd floor, Tengecha Lane, Ubora Centre)"></textarea>
+                    <textarea id="addressDetails" class="form-control" rows="3" placeholder="Name of the building and floor, Road, Ward (E.g. Room 310, 3rd floor, Tengecha Lane, Ubora Centre)"></textarea>
                     <small class="form-char-count">0/200</small>
                 </div>
                 <div class="form-group default-address">
