--- a/cart.html
+++ b/cart.html
@@ -249,11 +249,11 @@
 }
 
 .half-width {
-    width: 50%;
+    width: 49%;
 }
 
 .form-group {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 .form-group label {
@@ -268,6 +268,7 @@
     border: 1px solid #ddd;
     border-radius: 4px;
     box-sizing: border-box;
+    font-size: x-small;
 }
 
 .phone-input {
@@ -275,8 +276,8 @@
 }
 
 .phone-code {
-    width: 70px;
-    margin-right: 10px;
+    width: 80px;
+    margin-right: 5px;
     text-align: center;
 }
 
@@ -299,7 +300,7 @@
 }
 
 .default-address input {
-    margin-right: 10px;
+    margin-right: 5px;
 }
 
 .form-actions {
