--- a/cart.html
+++ b/cart.html
@@ -309,7 +309,7 @@
 }
 
 .btn {
-    padding: 10px 20px;
+    padding: 5px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -318,11 +318,13 @@
 .btn-submit {
     background-color: #1f83c6;
     color: #fff;
+    font-size: smaller;
 }
 
 .btn-cancel {
     background-color: #cfcdcd;
     color: #333;
+    font-size: smaller;
 }
 label{
     font-size: 10px;
@@ -434,7 +436,7 @@ color: #888;
         <div class="container">
             <span>Payment Method</span>
             <div class="payment-method">
-                <p style="font-family: background-origin;">M-PESA</p>
+                <p style="font-family: background-origin; font-weight: bold;">M-PESA</p>
             </div>
         </div>
         <div class="container">
