--- a/cart.html
+++ b/cart.html
@@ -229,8 +229,18 @@
     border-bottom: 1px solid #ddd;
     padding-bottom: 10px;
     margin-bottom: 20px;
-}
 
+}
+.form-header abel{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid #ddd;
+        padding-bottom: 15px;
+        margin-bottom: 15px;
+        font-size: 15px;
+        font-weight: bold;
+    }
 .form-header h5 {
     margin: 0;
     font-size: 12px;
