--- a/cart.html
+++ b/cart.html
@@ -256,6 +256,7 @@
 .form-row {
     display: flex;
     justify-content: space-between;
+    margin: 2px;
 }
 
 .half-width {
@@ -263,7 +264,7 @@
 }
 
 .form-group {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 
 .form-group label {
@@ -478,7 +479,7 @@ color: #888;
                 <div class="form-group">
                     <div class="phone-input">
                         <input type="text" id="phoneCode" class="form-control phone-code" value="+254" readonly="">
-                        <input type="text" id="phoneNumber" class="form-control phone-number" placeholder="e.g. 700200100">
+                        <input type="text" id="phoneNumber" class="form-control phone-number" placeholder="E.g. 700200100">
                     </div>
                 </div>
                 <div class="form-row">
